chore(css): fix orange dot alignment

--- a/static/style.css
+++ b/static/style.css
@@ -594,12 +594,8 @@ fieldset.radio label:last-of-type {
   height: 5px;
   border-radius: 100%;
   background: #c4a000;
-}
-
-.content .characters .name {
-  display: flex;
-  align-items: center;
-  gap: 3px;
+  margin-left: 3px;
+  margin-bottom: 2px;
 }
 
 .content .characters .actor {
